; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/siba/extr_siba.c_siba_write_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/siba/extr_siba.c_siba_write_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.siba_devinfo = type { %struct.bhnd_resource** }
%struct.bhnd_resource = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@SIBA_TML_SICF_SHIFT = common dso_local global i32 0, align 4
@SIBA_TML_SICF_MASK = common dso_local global i32 0, align 4
@SIBA_CFG0_TMSTATELOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32, i32)* @siba_write_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @siba_write_ioctl(i64 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.siba_devinfo*, align 8
  %11 = alloca %struct.bhnd_resource*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = load i64, i64* %7, align 8
  %15 = call i64 @device_get_parent(i64 %14)
  %16 = load i64, i64* %6, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %4
  %19 = load i32, i32* @EINVAL, align 4
  store i32 %19, i32* %5, align 4
  br label %48

20:                                               ; preds = %4
  %21 = load i64, i64* %7, align 8
  %22 = call %struct.siba_devinfo* @device_get_ivars(i64 %21)
  store %struct.siba_devinfo* %22, %struct.siba_devinfo** %10, align 8
  %23 = load %struct.siba_devinfo*, %struct.siba_devinfo** %10, align 8
  %24 = getelementptr inbounds %struct.siba_devinfo, %struct.siba_devinfo* %23, i32 0, i32 0
  %25 = load %struct.bhnd_resource**, %struct.bhnd_resource*** %24, align 8
  %26 = getelementptr inbounds %struct.bhnd_resource*, %struct.bhnd_resource** %25, i64 0
  %27 = load %struct.bhnd_resource*, %struct.bhnd_resource** %26, align 8
  store %struct.bhnd_resource* %27, %struct.bhnd_resource** %11, align 8
  %28 = icmp eq %struct.bhnd_resource* %27, null
  br i1 %28, label %29, label %31

29:                                               ; preds = %20
  %30 = load i32, i32* @ENODEV, align 4
  store i32 %30, i32* %5, align 4
  br label %48

31:                                               ; preds = %20
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* @SIBA_TML_SICF_SHIFT, align 4
  %34 = shl i32 %32, %33
  %35 = load i32, i32* @SIBA_TML_SICF_MASK, align 4
  %36 = and i32 %34, %35
  store i32 %36, i32* %13, align 4
  %37 = load i32, i32* %8, align 4
  %38 = load i32, i32* @SIBA_TML_SICF_SHIFT, align 4
  %39 = shl i32 %37, %38
  %40 = load i32, i32* %13, align 4
  %41 = and i32 %39, %40
  store i32 %41, i32* %12, align 4
  %42 = load i64, i64* %7, align 8
  %43 = load %struct.siba_devinfo*, %struct.siba_devinfo** %10, align 8
  %44 = load i32, i32* @SIBA_CFG0_TMSTATELOW, align 4
  %45 = load i32, i32* %12, align 4
  %46 = load i32, i32* %13, align 4
  %47 = call i32 @siba_write_target_state(i64 %42, %struct.siba_devinfo* %43, i32 %44, i32 %45, i32 %46)
  store i32 0, i32* %5, align 4
  br label %48

48:                                               ; preds = %31, %29, %18
  %49 = load i32, i32* %5, align 4
  ret i32 %49
}

declare dso_local i64 @device_get_parent(i64) #1

declare dso_local %struct.siba_devinfo* @device_get_ivars(i64) #1

declare dso_local i32 @siba_write_target_state(i64, %struct.siba_devinfo*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
